fix(front): harmonize spacing for new emoji position

--- a/frontend_app_html-document/src/css/index.styl
+++ b/frontend_app_html-document/src/css/index.styl
@@ -23,8 +23,6 @@
       cursor pointer
   &__lastversionbtn
     cursor pointer
-    & > i
-      font-size titleFontSize
   &__contentpage, &__contentpage__edition
     width 100%
     &__option
